# Mental-Health-Diary-backend

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
ffi_rust/: ffi_content.py  ffi_model.py
migrations/2024-10-26-114908_sign_up/: down.sql  up.sql
migrations/2024-10-26-153312_goals_db/: down.sql  up.sql
migrations/2024-10-29-051536_goals_done/: down.sql  up.sql
migrations/2024-10-30-134951_favourite_day/: down.sql  up.sql
migrations/2024-11-03-030641_diary/: down.sql  up.sql
migrations/2024-11-04-053822_ai/: down.sql  up.sql
migrations/2024-11-15-055120_questions/: down.sql  up.sql
migrations/2024-11-15-080532_search_results/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/ai/: create_ai.rs  delete_ai.rs  mod.rs  read_ai.rs  update_ai.rs
src/ai/qa_model/: load_model.rs  mod.rs  text_processing.rs
src/ai/question_answer_onx/: convert_token_to_text.rs  create_input_tensor.rs  extract_answer_from_output.rs  full_test_model.rs  mod.rs  read_onx_model.rs  tokenize_question.rs
src/ai/question_database/: create_question.rs  delete_question.rs  mod.rs  read_question.rs  update_question.rs
src/audio_text/: convert_to_wav.rs  create_audio_text.rs  create_audio_text2.rs  memory_wav.rs  mod.rs  whisper_doc.rs  whisper_mod_2.rs
src/day_of_week/: date.rs  day_month.rs  mod.rs
src/diary/: create_diary.rs  delete_diary.rs  mod.rs  read_diary.rs  update_diary.rs
src/favourite_day/: create_favourite_day.rs  delete_favourite_day.rs  mod.rs  read_all_favourite_day.rs  read_one_favourite_day.rs  update_favourite_day.rs
src/fetch_data/: fetch_and_store_data.rs  google_question.rs  mod.rs  narrowed_mhd.rs
src/goals/: create_goal.rs  delete_goal.rs  mod.rs  read_goal.rs  update_goal.rs
src/goals/goals_done/: create_done_goal.rs  delete_done_goal.rs  mod.rs  read_done_goal.rs  update_done_goal.rs
src/parquet_data/: insert_data_batches.rs  insert_question.rs  mod.rs  read_data.rs
src/roberta_model/: ai_model.py  load_ai_model.rs  mod.rs  test.py  test.rs
src/token_generation/: generate_token.rs
src/users/: create_users.rs  delete_users.rs  mod.rs  read_users.rs  update_users.rs
